--- a/index.html
+++ b/index.html
@@ -7,32 +7,11 @@
     </head>
     <body onload="getKommuner()">
 
-        <h1>Ejendomme</h1>
+        <h1>Oneview</h1>
         <section>
-            <select name="kommuner" id="dropdown"></select>&nbsp;&nbsp;
-            <input type="text" placeholder="Søgning..." id="search" name="search" style="width: 190px;">
-            <br/>
-            <br/>
-            <button type="button" id="searchButton" onclick="getEjendomme()">Søg ejendomme</button>&nbsp;&nbsp;
-            <label for="random">Tilfældig:</label>
-            <input type="checkbox" id="random" name="random" style="width: 20px;">&nbsp;&nbsp;
-            <label for="page">Side:</label>
-            <input type="number" value="1" id="page" name="page" style="width: 80px;">&nbsp;&nbsp;
-            <label for="pagesize">Sidestørrelse:</label>
-            <input type="number" value="25" id="pagesize" name="pagesize" style="width: 80px;">&nbsp;&nbsp;
-            <label for="mom">Moder:</label>
-            <input type="checkbox" checked id="mom" name="mom" style="width: 20px;">
-            <br/>
-            <br/>
-            <table id="ejendomme">
-                <tr>
-                  <th>Kommunekode</th>
-                  <th>Ejendomsnummer</th>
-                  <th>(Ejerlav, Matr.Nr.)</th>
-                  <th>Adressenavn</th>
-                  <th>Ejendomsrelation</th>
-                </tr>
-            </table>
+            <img src="https://oneview.erst.dk/counterseries.png?scroll_minutes=0&time_from=&minutes=1440&tid=17857698&scroll_value=180&time_to=&backgroundColor=E3F6CE&graph_ava=&graph_max=checked&graph_aggr=60&graph_ymax=1000&update=Update&he=875&wi=1904" alt="Færdige indenfor døgn">
+            <img src="https://oneview.erst.dk/counterseries.png?graph_aggr=60&backgroundColor=E3F6CE&tid=17857695&minutes=1440&graph_ava=&graph_avg=&graph_max=checked&graph_sum=&he=875&wi=1904" alt="Færdige indenfor døgn">
+            <img src="https://oneview.erst.dk/counterseries.png?graph_aggr=60&backgroundColor=E3F6CE&tid=17857696&minutes=1440&graph_ava=&graph_avg=&graph_max=checked&graph_sum=&he=875&wi=1904" alt="Færdige indenfor døgn">
         </section>
     </body>
 </html>
