--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         <h1>Oneview</h1>
         <section>
             <img src="https://oneview.erst.dk/counterseries.png?scroll_minutes=0&time_from=&minutes=1440&tid=17857698&scroll_value=180&time_to=&backgroundColor=E3F6CE&graph_ava=&graph_max=checked&graph_aggr=60&graph_ymax=1000&update=Update&he=875&wi=1904" alt="Færdige indenfor døgn">
-            <img src="https://oneview.erst.dk/counterseries.png?graph_aggr=60&backgroundColor=E3F6CE&tid=17857695&minutes=1440&graph_ava=&graph_avg=&graph_max=checked&graph_sum=&he=875&wi=1904" alt="Færdige indenfor døgn">
-            <img src="https://oneview.erst.dk/counterseries.png?graph_aggr=60&backgroundColor=E3F6CE&tid=17857696&minutes=1440&graph_ava=&graph_avg=&graph_max=checked&graph_sum=&he=875&wi=1904" alt="Færdige indenfor døgn">
+            <img src="https://oneview.erst.dk/counterseries.png?graph_aggr=60&backgroundColor=E3F6CE&tid=17857695&minutes=1440&graph_ava=&graph_avg=&graph_max=checked&graph_sum=&he=875&wi=1904" alt="Færdige indenfor time">
+            <img src="https://oneview.erst.dk/counterseries.png?graph_aggr=60&backgroundColor=E3F6CE&tid=17857696&minutes=1440&graph_ava=&graph_avg=&graph_max=checked&graph_sum=&he=875&wi=1904" alt="Bestillinger indenfor time">
+            <img src="https://oneview.erst.dk/counterseries.png?graph_aggr=60&backgroundColor=E3F6CE&tid=17857694&minutes=1440&graph_ava=&graph_avg=&graph_max=checked&graph_sum=&he=873&wi=1902" alt="Ubehandlede indenfor time">        
         </section>
     </body>
 </html>
