--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style type="text/css">
+            img {
+                max-width: 45%;
+            }
+        </style>
     </head>
         <h1>Oneview</h1>
         <section>
