--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style type="text/css">
             img {
-                scale: 0.8
+                max-width: 70%
             }
         </style>
     </head>
